package com.anaproj.bar.factory;

public interface Bebida extends Produto {
}
