package com.anaproj.bar.factory;

public interface Produto {
    String getDescricao();
    double getPreco();
}
