package com.anaproj.bar.modelo;

public interface EstrategiaPreco {
    double calcular(Produto produto);
}
